# PORTFOLIO_REPO

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-core.txt  requirements.txt  run0_ai_relevant_filter.sh  run2_relevant_art_llm.sh  sbatch_run0.sh  sbatch_run1.sh  sbatch_run1_title_triage.sh  sbatch_run1_title_triage_batched.sh  sbatch_run2.sh  sbatch_run3.sh
logs/: gpu_58559761.csv  gpu_58560762.csv  gpu_58561073.csv  gpu_58562534.csv  gpu_58582421.csv  gpu_58584147.csv  gpu_58585409.csv  gpu_58585491.csv  gpu_58591613.csv  gpu_58596824.csv  gpu_58597114.csv  gpu_58655505.csv  gpu_58684249.csv  gpu_58684261.csv  gpu_58684361.csv  gpu_58684658.csv  run0_ai_relevant_58969760.err  run0_ai_relevant_58969760.out  run0_ai_relevant_58969929.out  run0_ai_relevant_58970017.err  run0_ai_relevant_58970017.out  run0_ai_relevant_58970054.out  run0_ai_relevant_58975566.out  run1_58496528.err  run1_58496528.out  run1_58523874.err  run1_58523874.out  run1_58531439.err  run1_58531439.out  run1_58547286.err  run1_58547286.out  run1_58547484.err  run1_58547484.out  run1_58553937.err  run1_58553937.out  run1_batched_58559761.err  run1_batched_58559761.out  run1_batched_58560762.err  run1_batched_58561073.err  run1_batched_58561073.out  (+90 more)
notebooks/: RUN2_ALL_IN_ONE.csv  RUN2_output_LLM.csv  RUN3_output_LLM.csv  laws.csv  laws_output_LLM.csv  visualisation.ipynb
scripts/: PoC_filter.py  add_row_id.py  download.py  evaluate_vs_gold.py  fedlex_build_clean_dataset_cc_fr.py  fedlex_build_structure_from_xml.py  fedlex_build_structure_parquet.py  fedlex_download_xml_cc_fr.py  (+18 more)
(+59 files in other folders)
