[project]
name = "portfolio_repo"
version = "0.1.0"
description = "AI Regulation Portfolio – Switzerland (narrow LLM-impact scope)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "requests",
  "lxml",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

